samples/_failures_safe/1761422904_e1ac0e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9694256e.c: In function ‘main’:
./samples/SAFE/__tmp_9694256e.c:126:12: error: missing terminating " character
  126 |     printf("\nMatrix
      |            ^~~~~~~~~
./samples/SAFE/__tmp_9694256e.c:126:5: error: expected expression at end of input
  126 |     printf("\nMatrix
      |     ^~~~~~
./samples/SAFE/__tmp_9694256e.c:126:5: error: expected declaration or statement at end of input
